--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -15,7 +15,7 @@ jobs:
        - name: Setup Java JDK
          uses: actions/setup-java@v4.1.0
          with:
-           java-version: '8|11|15'
+           java-version: '8'
            distribution: 'adopt'
 
        - name : Build with Gradle
